Support multiple simultaneous streams
Instead of looping over a single endpoint for all files in a directory,
support looping a directory of files in individual stream endoints.

Move the default port to 554 to match live555

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     environment:
       - RTSP_PROTOCOLS=tcp
   stream:
+    container_name: ${STREAM_ENDPOINT}
     image: baicontainers/rtsp-feed
     networks:
       - rtsp-server
